test/langtools/tools/javac/lambda/T8024947/PotentiallyAmbiguousWarningTest.out
PotentiallyAmbiguousWarningTest.java:15:14: compiler.warn.potentially.ambiguous.overload: foo(java.util.function.Consumer<java.lang.Integer>), PotentiallyAmbiguousWarningTest.I1, foo(java.util.function.IntConsumer), PotentiallyAmbiguousWarningTest.I1
PotentiallyAmbiguousWarningTest.java:21:14: compiler.warn.potentially.ambiguous.overload: foo(java.util.function.Consumer<java.lang.Integer>), PotentiallyAmbiguousWarningTest.C1, foo(java.util.function.IntConsumer), PotentiallyAmbiguousWarningTest.C1
PotentiallyAmbiguousWarningTest.java:31:14: compiler.warn.potentially.ambiguous.overload: foo(java.util.function.Consumer<java.lang.Integer>), PotentiallyAmbiguousWarningTest.I2, foo(java.util.function.IntConsumer), PotentiallyAmbiguousWarningTest.J1
PotentiallyAmbiguousWarningTest.java:48:14: compiler.warn.potentially.ambiguous.overload: foo(java.util.function.Consumer<java.lang.Integer>), PotentiallyAmbiguousWarningTest.C2, foo(java.util.function.IntConsumer), PotentiallyAmbiguousWarningTest.D1
PotentiallyAmbiguousWarningTest.java:53:21: compiler.warn.potentially.ambiguous.overload: foo(java.util.function.Consumer<java.lang.Integer>), PotentiallyAmbiguousWarningTest.C3, foo(java.util.function.IntConsumer), PotentiallyAmbiguousWarningTest.C3
PotentiallyAmbiguousWarningTest.java:71:14: compiler.warn.potentially.ambiguous.overload: foo(java.util.function.IntConsumer), PotentiallyAmbiguousWarningTest.I5, foo(java.util.function.Consumer<java.lang.Integer>), PotentiallyAmbiguousWarningTest.J2
PotentiallyAmbiguousWarningTest.java:85:5: compiler.warn.potentially.ambiguous.overload: foo(java.util.function.Consumer<java.lang.Integer>), PotentiallyAmbiguousWarningTest.I6, foo(java.util.function.IntConsumer), PotentiallyAmbiguousWarningTest.I7
PotentiallyAmbiguousWarningTest.java:97:5: compiler.warn.potentially.ambiguous.overload: foo(java.util.function.Consumer<java.lang.Integer>), PotentiallyAmbiguousWarningTest.I10, foo(java.util.function.IntConsumer), PotentiallyAmbiguousWarningTest.I10
PotentiallyAmbiguousWarningTest.java:102:9: compiler.warn.potentially.ambiguous.overload: andThen(java.util.function.Consumer<? super java.lang.Integer>), java.util.function.Consumer, andThen(java.util.function.IntConsumer), java.util.function.IntConsumer
- compiler.err.warnings.and.werror
1 error
9 warnings
